<?xml version="1.0" encoding="utf-8"?>
<!--
    Code created by: Alex Bailey
    Edited by:
    Spot Finder App Version: 1.5.0
    Original creation date: 9/27/21
    For course: CSCI 362
    -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_account_create"
    android:padding="16dp"
    android:background="@drawable/app_background3"
    tools:context=".ui.createaccount.CreateAccountActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!-- title -->
            <TextView
                android:id="@+id/msg_create_account"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:autoSizeMaxTextSize="37sp"
                android:autoSizeMinTextSize="20sp"
                android:autoSizeStepGranularity="1px"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/renogare_soft_regular"
                android:text="@string/create_account2"
                android:textColor="@color/white" />

            <!-- subtitle -->
            <TextView
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:id="@+id/msg2_create_account"
                android:text="@string/create_account_subtitle"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="1px"
                android:autoSizeTextType="uniform"
                android:textColor="@color/theme_dark_blue"
                android:fontFamily="@font/renogare_soft_regular"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/msg_create_account"/>

            <!-- user type prompt -->
            <TextView
                android:id="@+id/user_type_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/type_selection"
                android:textSize="20sp"
                android:textColor="@color/theme_dark_blue"
                android:fontFamily="@font/renogare_soft_regular"
                android:layout_below="@+id/msg2_create_account"
                android:layout_alignLeft="@+id/password_confirm"
                android:layout_marginTop="40dp"/>

            <!-- user type -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_type_input_view"
                style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="32dp"
                android:layout_below="@+id/user_type_prompt">

                <AutoCompleteTextView
                    android:id="@+id/user_type_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:text="Select"
                    android:textColor="@color/white"
                    android:fontFamily="@font/renogare_soft_regular"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- first name -->
            <EditText
                android:id="@+id/firstName"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_type_input_view"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="#30ffffff"
                android:hint="@string/firstName"
                android:fontFamily="@font/renogare_soft_regular"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white" />

            <!-- last name -->
            <EditText
                android:id="@+id/lastName"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/firstName"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="#30ffffff"
                android:hint="@string/lastName"
                android:fontFamily="@font/renogare_soft_regular"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white" />

            <!-- email -->
            <EditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lastName"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="#30ffffff"
                android:hint="@string/email"
                android:fontFamily="@font/renogare_soft_regular"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white" />

            <!-- phone number -->
            <EditText
                android:id="@+id/phone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="#30ffffff"
                android:hint="@string/phone"
                android:fontFamily="@font/renogare_soft_regular"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white" />

            <!-- username -->
            <EditText
                android:id="@+id/username_create"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="#30ffffff"
                android:hint="@string/create_username"
                android:fontFamily="@font/renogare_soft_regular"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white" />

            <!-- password prompt -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/password_prompt"
                android:text="@string/password_prompt"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/renogare_soft_regular"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/username_create"/>

            <!-- password requirement 1 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/password_req1"
                android:text="@string/password_req1"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/renogare_soft_regular"
                android:layout_alignLeft="@id/password_create"
                android:layout_below="@+id/password_prompt"/>

            <!-- password requirement 2 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/password_req2"
                android:text="@string/password_req2"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/renogare_soft_regular"
                android:layout_alignLeft="@id/password_create"
                android:layout_below="@+id/password_req1"/>

            <!-- password requirement 3 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/password_req3"
                android:text="@string/password_req3"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/renogare_soft_regular"
                android:layout_alignLeft="@id/password_create"
                android:layout_below="@+id/password_req2"/>

            <!-- password requirement 4 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/password_req4"
                android:text="@string/password_req4"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/renogare_soft_regular"
                android:layout_alignLeft="@id/password_req5"
                android:layout_below="@+id/password_req3"/>

            <!-- password requirement 5 -->
            <TextView
                android:id="@+id/password_req5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_req4"
                android:layout_alignLeft="@id/password_create"
                android:fontFamily="@font/renogare_soft_regular"
                android:text="@string/password_req5"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <!-- password -->
            <EditText
                android:id="@+id/password_create"
                android:inputType="textVisiblePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_req5"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="#30ffffff"
                android:hint="@string/create_password"
                android:fontFamily="@font/renogare_soft_regular"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white" />

            <!-- password confirm -->
            <EditText
                android:id="@+id/password_confirm"
                android:inputType="textVisiblePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_create"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="#30ffffff"
                android:hint="@string/confirm_password"
                android:fontFamily="@font/renogare_soft_regular"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white" />

            <!-- continue button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/continue_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_confirm"
                android:layout_alignRight="@+id/password_confirm"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/renogare_soft_regular"
                android:backgroundTint="@color/theme_light_blue"
                android:text="@string/continue_button">

            </com.google.android.material.button.MaterialButton>

            <!-- back button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_confirm"
                android:layout_alignLeft="@+id/password_confirm"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/renogare_soft_regular"
                android:backgroundTint="@color/theme_light_blue"
                android:text="@string/cancel">

            </com.google.android.material.button.MaterialButton>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>