<?xml version="1.0" encoding="utf-8"?>
<!--
    Code created by: Alex Bailey
    Edited by:
    Spot Finder App Version: 1.5.0
    Original creation date: 9/27/21
    For course: CSCI 362
    -->
<RelativeLayout
    android:id="@+id/license_plate_page"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background3"
    android:padding="10dp"
    tools:context=".ui.createaccount.LicensePlateActivity">

    <!-- title -->
    <TextView
        android:id="@+id/enter_valid_license_plate"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/renogare_soft_regular"
        android:gravity="center"
        android:text="@string/plate_entry"
        android:textColor="@color/white"
        android:autoSizeMaxTextSize="37sp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeStepGranularity="1px"
        android:autoSizeTextType="uniform" />

    <!-- subtitle -->
    <TextView
        android:id="@+id/plate_entry_sub"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@+id/enter_valid_license_plate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/renogare_soft_regular"
        android:text="@string/plate_subtitle"
        android:textColor="@color/black"
        android:autoSizeMaxTextSize="25sp"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeStepGranularity="1px"
        android:autoSizeTextType="uniform"/>

    <!-- plate state -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/plate_state_input_view"
        style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@+id/plate_entry_sub">

        <AutoCompleteTextView
            android:id="@+id/plate_state_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none"
            android:text="State"
            android:textColor="@color/black"
            android:fontFamily="@font/renogare_soft_regular"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Enter info -->
    <EditText
        android:id="@+id/plate_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/plate_state_input_view"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:hint="@string/plate_number"
        android:fontFamily="@font/renogare_soft_regular"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />

    <!-- Continue button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/plate_entry_continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/plate_number"
        android:layout_marginTop="30dp"
        android:layout_alignRight="@+id/plate_number"
        android:backgroundTint="@color/theme_light_blue"
        android:text="@string/continue_button"
        android:fontFamily="@font/renogare_soft_regular">

    </com.google.android.material.button.MaterialButton>

    <!-- back button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/plate_entry_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/plate_number"
        android:layout_alignLeft="@+id/plate_number"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/theme_light_blue"
        android:text="@string/back"
        android:fontFamily="@font/renogare_soft_regular">

    </com.google.android.material.button.MaterialButton>

</RelativeLayout>